<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    tools:context="com.qtaaruf.uaspasi.MenuEmpat"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="Diagonal-1"
            android:textSize="28sp"
            android:textColor="@color/hitam" />

        <EditText
            android:id="@+id/editText_diagonal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="satuan (cm)"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="Diagonal-2"
            android:textColor="@color/hitam"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/editText_diagonal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="satuan (cm)"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_hitung4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:onClick="total"
        android:text="hitung" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Luas"
            android:textSize="40sp"
            android:textColor="@color/hitam"/>

        <TextView
            android:id="@+id/textView_hasil4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="0"
            android:textSize="40sp"
            android:textColor="@color/hitam"
            android:gravity="right"
            android:layout_marginRight="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="cm^2"
            android:textSize="28sp"
            android:textColor="@color/hitam"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

</LinearLayout>
